# special-dollop

./: .cursorrules  .gitignore  CLAUDE.md  COMMUNICATION_GUIDELINES.md  Cargo.toml  IRONRDP_RESTORATION.md  Makefile  NEXT_STEPS.md  ONE_CHAR_BEHIND_FIX.md  PORTING_COMPLETE.md  README.md  build_and_test.sh  build_binding.sh  build_full.sh  build_linux-amd-wheel.sh  build_linux_wheel.sh  combined_certs.pem  deny.toml  docker-compose.guacr-test.yml  docker-compose.test.yml  pyproject.toml
crates/guacr/: Cargo.toml
crates/guacr-database/: Cargo.toml  docker-compose.test.yml
crates/guacr-database/examples/: test_url_encoding.rs
crates/guacr-database/src/: cassandra.rs  csv_export.rs  csv_import.rs  dynamodb.rs  elasticsearch.rs  handler_helpers.rs  lib.rs  mariadb.rs  mongodb.rs  mysql.rs  mysql_executor.rs  odbc.rs  oracle.rs  postgresql.rs  query_executor.rs  recording.rs  redis.rs  security.rs  spreadsheet.rs  sql_terminal.rs  sqlserver.rs
crates/guacr-database/tests/: integration_test.rs  url_encoding_test.rs
crates/guacr-guacd/: Cargo.toml
crates/guacr-guacd/src/: args.rs  client.rs  lib.rs  server.rs
crates/guacr-handlers/: Cargo.toml  README.md
crates/guacr-handlers/src/: adaptive_quality.rs  cursor.rs  docker_handler.rs  drag_detector.rs  error.rs  events.rs  handler.rs  handshake.rs  host_key.rs  integration.rs  kubernetes.rs  lib.rs  mock.rs  multi_channel.rs  recording.rs  registry.rs  resource_browser.rs  security.rs  session.rs  sync_control.rs  throughput.rs  vsphere.rs
crates/guacr-handlers/tests/: performance_test.rs  pipe_integration_test.rs  recording_integration_test.rs  security_test.rs
crates/guacr-protocol/: Cargo.toml  MERGE_SUMMARY.md
crates/guacr-protocol/docs/: BINARY_PROTOCOL_SPEC.md  GUACAMOLE_PROTOCOL.md
crates/guacr-protocol/src/: advanced.rs  drawing.rs  layers.rs  lib.rs  parser.rs  streaming.rs  streams.rs  text_optimized.rs
crates/guacr-protocol/tests/: optimized_format_test.rs  streaming_parser_tests.rs
crates/guacr-rbi/: Cargo.toml  PROCESS_ISOLATION.md  README.md
crates/guacr-rbi/src/: adaptive_fps.rs  audio.rs  autofill.rs  browser_client.rs  cef_browser_client.rs  cef_session.rs  chrome_session.rs  clipboard.rs  clipboard_polling.rs  cursor.rs  dirty_tracker.rs  events.rs  file_upload.rs  handler.rs  input.rs  js_dialog.rs  lib.rs  profile_isolation.rs  screencast.rs  scroll_detector.rs  tabs.rs
crates/guacr-rbi/tests/: integration_test.rs
crates/guacr-rdp/: Cargo.toml  IRONRDP_STATUS.md  README.md  build.rs
crates/guacr-rdp/docs/: README.md
crates/guacr-rdp/examples/: analyze_screenshot.rs  long_connection.rs  rdp_terminal_mode.rs  screenshot_detailed.rs  screenshot_terminal.rs  screenshot_test.rs  simple_screenshot.rs  terminal_rdp.rs
crates/guacr-rdp/src/: channel_handler.rs  client.rs  clipboard.rs  error.rs  framebuffer.rs  handler.rs  input_handler.rs  lib.rs  settings.rs  sftp_integration.rs  simd.rs  window_detector.rs
crates/guacr-rdp/tests/: integration_test.rs  jpeg_encoding_test.rs
crates/guacr-recording/: Cargo.toml
crates/guacr-recording/src/: asciicast.rs  config.rs  helpers.rs  lib.rs  multi.rs  ses.rs  transport.rs
crates/guacr-sftp/: Cargo.toml
crates/guacr-sftp/src/: channel_adapter.rs  file_browser.rs  handler.rs  lib.rs
crates/guacr-sftp/tests/: integration_test.rs
crates/guacr-ssh/: Cargo.toml
crates/guacr-ssh/docs/: README.md
crates/guacr-ssh/src/: handler.rs  lib.rs
crates/guacr-ssh/tests/: integration_test.rs
crates/guacr-telnet/: Cargo.toml
crates/guacr-telnet/src/: handler.rs  lib.rs  serial.rs
crates/guacr-telnet/tests/: integration_test.rs
crates/guacr-terminal/: Cargo.toml
crates/guacr-terminal/benches/: alpha_fix_bench.rs
crates/guacr-terminal/docs/: RENDERING_METHODS.md  TERMINAL_GRAPHICS.md
crates/guacr-terminal/examples/: keeper_recording_integration.rs  test_png_generation.rs
crates/guacr-terminal/fonts/: README.md
crates/guacr-terminal/src/: buffer_pool.rs  clipboard.rs  config.rs  copy_detector.rs  database_renderer.rs  dirty_tracker.rs  emulator.rs  framebuffer.rs  graphics_protocol.rs  guacamole_input.rs  hardware_encoder.rs  hardware_encoder_nvenc.rs  hardware_encoder_quicksync.rs  hardware_encoder_vaapi.rs  hardware_encoder_videotoolbox.rs  hardware_encoding_helper.rs  input_handler.rs  keysym.rs  lib.rs  recorder.rs  recording_pipeline.rs  renderer.rs  scroll_detector.rs  selection_point.rs  simd.rs  terminal_input_handler.rs
crates/guacr-terminal/tests/: recording_validation.rs
crates/guacr-threat-detection/: Cargo.toml
crates/guacr-threat-detection/docs/: THREAT_DETECTION.md
crates/guacr-threat-detection/src/: approval.rs  baml_client.rs  classifier.rs  command_buffer.rs  detector.rs  lib.rs  proactive.rs  session_guard.rs  terminal_state.rs  threat.rs
crates/guacr-threat-detection/tests/: integration_test.rs
crates/guacr-tn3270/: Cargo.toml
crates/guacr-tn3270/src/: datastream.rs  ebcdic.rs  lib.rs  screen.rs
crates/guacr-tn5250/: Cargo.toml
crates/guacr-tn5250/src/: datastream.rs  lib.rs  screen.rs
crates/guacr-vnc/: Cargo.toml
crates/guacr-vnc/src/: handler.rs  lib.rs  sftp_integration.rs  vnc_protocol.rs
crates/guacr-vnc/tests/: integration_test.rs  jpeg_encoding_test.rs
crates/guacr/docs/: CONTAINER_MANAGEMENT_PROTOCOL.md  README.md
crates/guacr/src/: lib.rs
crates/keeper-pam-webrtc-rs/: CLAUDE.md  Cargo.toml  README.md.original  build_linux_wheel.sh  pyproject.toml.original
crates/keeper-pam-webrtc-rs/docs/: ACTOR_DASHMAP_RAII.md  ENHANCED_METRICS_SUMMARY.md  ICE_RESTART_TRICKLE_INTEGRATION_GUIDE.md  PERFORMANCE_BENCHMARKS.md  UDP_SOCKS5_IMPLEMENTATION.md  WEBSOCKET_INTEGRATION.md
crates/keeper-pam-webrtc-rs/src/: handler_integration.rs  lib.rs  logger.rs  router_helpers.rs  runtime.rs  tube.rs  tube_and_channel_helpers.rs  (+6 more)
crates/keeperdb-proxy/: Cargo.toml
crates/pam-socks5/: Cargo.toml
crates/python-bindings/: Cargo.toml  LICENSE  build_full.sh  build_linux-amd-wheel.sh  build_linux_wheel.sh  pyproject.toml
crates/webrtc-bindings/: Cargo.toml  README.md  pyproject.toml
(+358 files in other folders)
