[workspace]
resolver = "2"
members = [
    "crates/guacr",
    "crates/guacr-handlers",
    "crates/guacr-protocol",
    "crates/guacr-terminal",
    "crates/guacr-ssh",
    "crates/guacr-telnet",
    "crates/guacr-rdp",  # FreeRDP-based implementation
    "crates/guacr-vnc",
    "crates/guacr-database",
    "crates/guacr-rbi",
    "crates/guacr-sftp",
    "crates/guacr-threat-detection",
]

[workspace.package]
version = "1.1.7"
edition = "2021"
license = "MIT"
authors = ["Keeper Security Engineering <engineering@keeper.io>"]

[workspace.dependencies]
# Core async
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
async-trait = "0.1.89"

# Data structures
bytes = "1.11.0"
dashmap = "6.1.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging
log = "0.4.28"

# Utilities
uuid = { version = "1.18.1", features = ["v4"] }
base64 = "0.22.1"

# Use local IronRDP fork with Update PDU handling + sspi 0.19.3
# Your fork has graphics update support that's not yet in upstream master
# Branch: feature/handle-update-pdu
# Updated sspi to 0.19.3 for rand_core 0.6.4 compatibility
[patch.crates-io]
ironrdp = { path = "../IronRDP/crates/ironrdp" }
ironrdp-async = { path = "../IronRDP/crates/ironrdp-async" }
ironrdp-tokio = { path = "../IronRDP/crates/ironrdp-tokio" }
ironrdp-pdu = { path = "../IronRDP/crates/ironrdp-pdu" }
ironrdp-session = { path = "../IronRDP/crates/ironrdp-session" }
ironrdp-core = { path = "../IronRDP/crates/ironrdp-core" }
ironrdp-error = { path = "../IronRDP/crates/ironrdp-error" }
ironrdp-connector = { path = "../IronRDP/crates/ironrdp-connector" }
ironrdp-graphics = { path = "../IronRDP/crates/ironrdp-graphics" }
ironrdp-input = { path = "../IronRDP/crates/ironrdp-input" }
ironrdp-cliprdr = { path = "../IronRDP/crates/ironrdp-cliprdr" }
ironrdp-svc = { path = "../IronRDP/crates/ironrdp-svc" }
ironrdp-tls = { path = "../IronRDP/crates/ironrdp-tls" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
