[workspace]
members = [
    "crates/keeper-pam-webrtc-rs",
    "crates/python-bindings",
    "crates/guacr",
    "crates/guacr-handlers",
    "crates/guacr-protocol",
    "crates/guacr-terminal",
    "crates/guacr-ssh",
    "crates/guacr-telnet",
    "crates/guacr-rdp",
    "crates/guacr-vnc",
    "crates/guacr-database",
    "crates/guacr-sftp",
    "crates/guacr-rbi",
    "crates/guacr-threat-detection",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"
authors = ["Keeper Security Engineering <engineering@keeper.io>"]

# Shared dependencies across workspace
[workspace.dependencies]
# Core async
tokio = { version = "1.49.0", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7.18"
async-trait = "0.1.89"

# Data structures
bytes = "1.11.0"
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
parking_lot = "0.12"
smallvec = "1.15.1"

# WebRTC
webrtc = "0.14.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging
log = "0.4.29"
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "json", "tracing-log"] }

# Utilities
uuid = { version = "1.19.0", features = ["v4"] }
base64 = "0.22.1"
lazy_static = "1.5.0"
once_cell = "1.21.3"
arc-swap = "1.8.0"
bitflags = "2.9"

# Python bindings
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py37"] }

# Crate-specific dependencies
aes-gcm = "0.10.3"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
heapless = "0.9.2"
hex = "0.4.3"
hkdf = "0.12.4"
if-addrs = "0.14"
ipnet = "2.11"
p256 = { version = "0.13.2", features = ["ecdsa"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23.36", features = ["ring"], default-features = false }
sha2 = "0.10.9"
socket2 = "0.6.1"

# Workspace-level patches for IronRDP
[patch.crates-io]
ironrdp = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-async = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-tokio = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-pdu = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-session = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-core = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-error = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-connector = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-graphics = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-input = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-cliprdr = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-svc = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-displaycontrol = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-dvc = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
