[package]
name = "keeper-pam-webrtc-rs"
version = "1.6.1"
edition = "2021"
license = "MIT"
authors = ["Keeper Security Engineering <engineering@keeper.io>"]
description = "Keeper WebRTC tube abstraction - secure WebRTC tunneling core library"

[lib]
name = "keeper_pam_webrtc_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3"]
profiling = []

[dependencies]
# Protocol handlers integration (from separate pam-guacr repo)
# Provides: SSH, Telnet, VNC, SFTP, RDP, Database, RBI (Remote Browser Isolation)
# CI uses git dependency with ACCESS_TOKEN/GITHUB_TOKEN for authentication
# Local development can use path dependency when both repos are checked out side-by-side
# rbi-chrome: requires Chrome/Chromium installed on system at runtime (no audio)
# rbi-cef: requires CEF binaries at build time (has audio support)

# Git dependency (for CI and when pam-guacr is not checked out locally)
guacr = { git = "https://github.com/Keeper-Security/pam-guacr.git", features = ["ssh", "telnet", "vnc", "sftp", "rbi-chrome", "rdp", "database"] }
# Path dependency (for local development - uncomment and comment out git dependency above)
# guacr = { path = "../pam-guacr/crates/guacr", features = ["ssh", "telnet", "vnc", "sftp", "rbi-chrome", "rdp", "database"] }

# Core async
tokio = { version = "1.49.0", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7.18"

# Data structures
bytes = "1.11.0"
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
parking_lot = "0.12"
smallvec = "1.15.1"

# WebRTC
webrtc = "0.14.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging
log = "0.4.29"
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "json", "tracing-log"] }

# Utilities
uuid = { version = "1.19.0", features = ["v4"] }
base64 = "0.22.1"
lazy_static = "1.5.0"
once_cell = "1.21.3"
arc-swap = "1.8.0"
bitflags = "2.9"

# Crate-specific dependencies
aes-gcm = "0.10.3"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
heapless = "0.9.2"
hex = "0.4.3"
hkdf = "0.12.4"
if-addrs = "0.14"
ipnet = "2.11"
p256 = { version = "0.13.2", features = ["ecdsa"] }
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py37"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23.36", features = ["ring"], default-features = false }
sha2 = "0.10.9"
socket2 = "0.6.1"

[dev-dependencies]
ctor = "0.6.2"  # For test initialization (rustls crypto provider setup)

# Patch IronRDP to use fork with 0.14.0 and Update PDU support
# This is required for guacr-rdp to work properly
# Fork: https://github.com/miroberts/IronRDP
# Branch: feature/handle-update-pdu
[patch.crates-io]
ironrdp = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-async = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-tokio = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-pdu = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-session = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-core = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-error = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-connector = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-graphics = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-input = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-cliprdr = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-svc = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-displaycontrol = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }
ironrdp-dvc = { git = "https://github.com/miroberts/IronRDP.git", branch = "feature/handle-update-pdu" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false
