[package]
name = "guacr-database"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Database protocol handlers (MySQL, PostgreSQL, SQL Server, Oracle, MongoDB, Redis) for guacr"

[dependencies]
# Local dependencies
guacr-handlers = { path = "../guacr-handlers" }
guacr-terminal = { path = "../guacr-terminal" }
guacr-protocol = { path = "../guacr-protocol" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true

# Database clients  
# Note: Using rustls for pure Rust TLS (no OpenSSL dependency)

# MySQL/MariaDB
# Note: 0.36+ fixes rustls-pemfile and lru vulnerabilities
mysql_async = { version = "0.36", default-features = false, features = ["default-rustls"] }

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"], default-features = false }

# SQL Server
# Note: Latest stable version. rustls-pemfile warning addressed via workspace patch
tiberius = { version = "0.12", features = ["sql-browser-tokio", "rustls"], default-features = false }

# MongoDB
mongodb = { version = "3.1" }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Oracle
# Note: Requires Oracle Instant Client libraries at runtime.
# Set ORACLE_HOME or OCI_LIB_DIR environment variable to enable.
# See docs/ORACLE_SETUP.md for installation instructions.
oracle = { version = "0.6" }

# TLS
rustls = { version = "0.23", features = ["ring"] }

# Async utilities
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Hex encoding (for SQL Server binary data)
hex = "0.4"

# Image processing for spreadsheet view
image = "0.25"

# Utilities
base64.workspace = true
urlencoding = "2.1"

# Lock primitives (no poisoning)
parking_lot = "0.12"
