[package]
name = "guacr-handlers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol handler trait and registry for guacr remote desktop protocols"

[features]
default = []
# Enable guacd wire protocol compatibility (select/args/connect/ready handshake)
# This allows guacr to act as a drop-in replacement for guacd on TCP port 4822
guacd-compat = ["dep:uuid"]

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
dashmap.workspace = true
log.workspace = true

# Protocol support
guacr-protocol = { path = "../guacr-protocol", version = "2.0.0" }

# Additional dependencies
parking_lot = "0.12"
chrono = "0.4"
base64.workspace = true

# Image encoding for cursor support
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
webp = "0.3"

# Host key verification
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"

# Optional dependencies for guacd-compat feature
uuid = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
