[package]
name = "guacr-rdp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RDP protocol handler for guacr remote desktop (FreeRDP backend)"
links = "freerdp2"
build = "build.rs"

[dependencies]
# Local dependencies
guacr-handlers = { path = "../guacr-handlers" }
guacr-protocol = { path = "../guacr-protocol" }
guacr-terminal = { path = "../guacr-terminal" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
thiserror.workspace = true
log.workspace = true
base64.workspace = true

# Image processing
image = "0.25"

# FFI utilities
libc = "0.2"

# SFTP integration support
guacr-sftp = { path = "../guacr-sftp", optional = true }

[build-dependencies]
# FFI binding generator
bindgen = "0.72"
pkg-config = "0.3"

[features]
default = []
# SFTP integration for file transfer over RDP
sftp = ["guacr-sftp"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
