[package]
name = "guacr-sftp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SFTP file transfer protocol handler for guacr"

[dependencies]
# Local dependencies
guacr-handlers = { path = "../guacr-handlers" }
guacr-ssh = { path = "../guacr-ssh" }  # Reuse SSH connection
guacr-rdp = { path = "../guacr-rdp" }  # Reuse framebuffer for file browser

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true

# SSH/SFTP
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2.1"

# Image for file browser rendering
image = "0.25"

# Utilities
base64.workspace = true
