[package]
name = "guacr-threat-detection"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI threat detection using BAML REST API"

[features]
default = []
terminal-state = ["guacr-terminal"]
onnx-classifier = ["ort", "ndarray", "tokenizers"]

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

# HTTP client for BAML REST API
reqwest = { version = "0.12", features = ["json"] }

# Regex for tag matching
regex = "1.12"

# Utilities
uuid.workspace = true

# Lock-free concurrency (following project patterns)
crossbeam = "0.8"
parking_lot = "0.12"

# Terminal emulator for state extraction (optional)
guacr-terminal = { path = "../guacr-terminal", optional = true }

# ONNX Runtime for local action effect classifier (optional)
ort = { version = "2.0.0-rc.11", features = ["download-binaries"], optional = true }
ndarray = { version = "0.17", optional = true }
tokenizers = { version = "0.19", default-features = false, features = ["onig"], optional = true }
